    (Larry McCay via cnauroth)

    HADOOP-11280. TestWinUtils#testChmod fails after removal of
    NO_PROPAGATE_INHERIT_ACE. (cnauroth)

    HADOOP-11282. Skip NFS TestShellBasedIdMapping tests that are irrelevant on
    Windows. (cnauroth)

    HADOOP-9576. Changed NetUtils#wrapException to throw EOFException instead
    of wrapping it as IOException. (Steve Loughran via jianhe)

Release 2.5.2 - 2014-11-10

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
  
  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11243. SSLFactory shouldn't allow SSLv3. (Wei Yan via kasha)

    HADOOP-11260. Patch up Jetty to disable SSLv3. (Mike Yoder via kasha)


Release 2.5.1 - 2014-09-05

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
  
    HADOOP-10956. Fix create-release script to include docs and necessary txt
    files. (kasha)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11001. Fix test-patch to work with the git repo. (kasha)

    HADOOP-11065. Rat check should exclude "**/build/**". (kasha)

Release 2.5.0 - 2014-08-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-10498. Add support for proxy server. (daryn)

    HADOOP-9704. Write metrics sink plugin for Hadoop/Graphite (Chu Tong, Alex Newman and Babak Behzad via raviprak)

    HADOOP-8943. Support multiple group mapping providers. (Kai Zheng via brandonli)

    HADOOP-9361 Strictly define the expected behavior of filesystem APIs and
    write tests to verify compliance (stevel)

  IMPROVEMENTS

    HADOOP-10451. Remove unused field and imports from SaslRpcServer.
    (Benoy Antony via jing9)

    HADOOP-10345. Sanitize the the inputs (groups and hosts) for the proxyuser
    configuration. (Benoy Antony via jing9)

    HADOOP-10454. Provide FileContext version of har file system. (Kihwal Lee
    via jeagles)

    HADOOP-10104. Update jackson to 1.9.13 (Akira Ajisaka via stevel)

    HADOOP-10503. Move junit up to v 4.11. (cnauroth)

    HADOOP-10535. Make the retry numbers in ActiveStandbyElector configurable.